complete steps
