# internal/delivery/http/meapi/ato.go
@@ -1,0 +1,6 @@
+package meapi
+
+type updateSettingsRequestATO struct {
+	Timezone  *string `json:"timezone"`
+	StepsGoal *int    `json:"stepsGoal"`
+}
